v0.10
	* ADD : navigation: view -> bookmark + add/remove
	* FIX : warn when OSM userid/password not set
	* ADD : Export viewport to OSM
	* FIX : crash when splitting roads (by Daniel van Gerpen)
	* FIX : various memory leaks and clean ups (by Daniel van Gerpen)
	* ADD : provide navigation for the slippy map with right and left mouse button (by Daniel van Gerpen)
	* FIX : zoom around cursor position
	* ADD : import NMEA logs (crude) (by Chris Browet)
	* FIX : proper handling of dirty documents (by Chris Browet)
	* ADD : search on name/tags (by Chris Browet)
	* FIX : don't crash while createing a roundabout (by Tommi Vainikiainen)
	* ADD : curved road support
	* FIX : enhance somewhat visibility of selected items (by Chris Browet)
	* ADD : export OSM files (by Chris Browet)
	* ADD : support for OSM backgrounds (by Chris Browet)
	* ADD : centralized preferences dialog (by Chris Browet)
	* ADD : support for WMS maps (by Chris Browet)
	* FIX : remove yahoo maps support (not "legal" way to access tiles) (by Chris Browet)
	* ADD : support for Yahoo maps backgrounds (by Chris Browet; QMapControl widget by Kai Winter)
	* ADD : tags autocompletion in related widgets
	* ADD : paint style editor

v0.09
	* ADD : support for Noni GPSPlot tracks
	* ADD : draw natural=wood areas (by Raphael Studer)
	* FIX : also draw trackpoints that have an icon
	* FIX : draw unconnected trackpoints
	* ADD : multiple remove
	* ADD : save last current directory
	* ADD : draw landuse=forest area (by Raphael Studer)
	* ADD : move trackpoints onto a road inserts the point in the road
	* ADD : draw a lot of more things in merkaartor (by Matt Williams)
	* ADD : draw hospital area and node
	* ADD : nice amenity selector for nodes
	* FIX : use the standard system for predefined tags for highway
	* ADD : nice landuse selector for roads (areas)
	* ADD : more amenities (by Matt Williams)
	* ADD : ability to easily draw an area
	* ADD : landuse selector for relations
	* ADD : upload relations to OSM