@@ -1,7 +1,7 @@
 //
 // C++ Implementation: editcompleterdelegate
 //
-// Description: 
+// Description:
 //
 //
 // Author: cbro <cbro@semperpax.com>, (C) 2008
@@ -12,6 +12,10 @@
 #include "Utils/EditCompleterDelegate.h"
 #include "MainWindow.h"
 #include "Map/MapDocument.h"
+
+#include <QLineEdit>
+
+#define NEW_KEY_TEXT "Edit this to add..."
 
 EditCompleterDelegate::EditCompleterDelegate(QObject* parent): QItemDelegate(parent)
 {
@@ -25,7 +29,7 @@ EditCompleterDelegate::~EditCompleterDelegate()
 QWidget* EditCompleterDelegate::createEditor(QWidget* parent, const QStyleOptionViewItem& /* option */, const QModelIndex& index) const
 {
     QCompleter* completer;
-    
+
     QComboBox *edit = new QComboBox(parent);
     edit->setInsertPolicy(QComboBox::InsertAlphabetically);
     MainWindow* mw = (MainWindow *)(this->parent());
@@ -49,13 +53,19 @@ QWidget* EditCompleterDelegate::createEditor(QWidget* parent, const QStyleOption
 void EditCompleterDelegate::setEditorData(QWidget* editor, const QModelIndex& index) const
 {
     QComboBox *edit = static_cast<QComboBox*>(editor);
-    edit->setEditText(index.model()->data(index).toString());
+	if (index.model()->data(index).toString() != NEW_KEY_TEXT)
+    	edit->setEditText(index.model()->data(index).toString());
+	else
+		edit->clearEditText();
+	edit->lineEdit()->selectAll();
+
 }
 
 void EditCompleterDelegate::setModelData(QWidget* editor, QAbstractItemModel* model, const QModelIndex& index) const
 {
     QComboBox *edit = static_cast<QComboBox*>(editor);
-    model->setData(index, edit->currentText());
+	if (!edit->currentText().isEmpty())
+    	model->setData(index, edit->currentText());
 }
 
 void EditCompleterDelegate::updateEditorGeometry(QWidget* editor, const QStyleOptionViewItem& option, const QModelIndex& /* index */) const
